<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="city1">Ярославль</string>
    <string name="temperature1">22 C</string>
    <string name="extra_options">Дополнительные параметры:</string>
    <string name="pressure">давление</string>
    <string name="wind_speed">скорость ветра</string>
    <string name="input_city">Введите город</string>
    <string name="button_ok">OK</string>
    <string name="settings">Настройки</string>
</resources>