<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="#9700BCD4"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_city"
        android:id="@+id/editText"/>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_ok" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_options"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="@android:color/background_dark"
        android:buttonTint="#3700B3"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:textColor="@android:color/background_dark"
        android:buttonTint="#3700B3"
        android:textSize="18sp" />
</LinearLayout>
