<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9700BCD4"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/city1"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/suncloud" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/temperature1"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/settings" />


</LinearLayout>